; ModuleID = '/home/carl/AnghaBench/mpv/demux/extr_demux.c_get_foward_buffered_bytes.c'
source_filename = "/home/carl/AnghaBench/mpv/demux/extr_demux.c_get_foward_buffered_bytes.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.demux_stream = type { %struct.TYPE_4__*, %struct.TYPE_3__* }
%struct.TYPE_4__ = type { i64 }
%struct.TYPE_3__ = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.demux_stream*)* @get_foward_buffered_bytes to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @get_foward_buffered_bytes(%struct.demux_stream* %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca %struct.demux_stream*, align 8
  store %struct.demux_stream* %0, %struct.demux_stream** %3, align 8
  %4 = load %struct.demux_stream*, %struct.demux_stream** %3, align 8
  %5 = getelementptr inbounds %struct.demux_stream, %struct.demux_stream* %4, i32 0, i32 0
  %6 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %7 = icmp ne %struct.TYPE_4__* %6, null
  br i1 %7, label %9, label %8

8:                                                ; preds = %1
  store i64 0, i64* %2, align 8
  br label %21

9:                                                ; preds = %1
  %10 = load %struct.demux_stream*, %struct.demux_stream** %3, align 8
  %11 = getelementptr inbounds %struct.demux_stream, %struct.demux_stream* %10, i32 0, i32 1
  %12 = load %struct.TYPE_3__*, %struct.TYPE_3__** %11, align 8
  %13 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = load %struct.demux_stream*, %struct.demux_stream** %3, align 8
  %16 = getelementptr inbounds %struct.demux_stream, %struct.demux_stream* %15, i32 0, i32 0
  %17 = load %struct.TYPE_4__*, %struct.TYPE_4__** %16, align 8
  %18 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %17, i32 0, i32 0
  %19 = load i64, i64* %18, align 8
  %20 = sub nsw i64 %14, %19
  store i64 %20, i64* %2, align 8
  br label %21

21:                                               ; preds = %9, %8
  %22 = load i64, i64* %2, align 8
  ret i64 %22
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
